@@ -7,6 +7,7 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.security.InvalidKeyException;
 import java.security.Key;
 import java.security.KeyFactory;
@@ -17,6 +18,7 @@ import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.spec.EncodedKeySpec;
 import java.security.spec.InvalidKeySpecException;
+import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 
 import javax.crypto.BadPaddingException;
@@ -32,16 +34,6 @@ public class Encrypter {
         Encrypter.filesDir = filesDir;
     }
 
-    public static void storeKey(Key key, String fileName){
-        try {
-            FileOutputStream publicKeyFile = new FileOutputStream(new File(filesDir, fileName));
-            publicKeyFile.write(key.getEncoded());
-
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
     public static KeyPair generateKeyPair() {
 
         KeyPairGenerator generator = null;
@@ -52,8 +44,19 @@ public class Encrypter {
         }
         generator.initialize(2048);
         KeyPair keyPair = generator.generateKeyPair();
-
+        Log.i("Encrypter", "Successfully created a Keypair.");
         return keyPair;
+    }
+
+    public static void storeKey(Key key, String fileName){
+        try {
+            FileOutputStream publicKeyFile = new FileOutputStream(new File(filesDir, fileName));
+            publicKeyFile.write(key.getEncoded());
+            Log.i("Encrypter", "Stored Key on the device");
+
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public static PublicKey readPublicKeyFromFile(String fileName) {
@@ -65,6 +68,7 @@ public class Encrypter {
             EncodedKeySpec pubKeySpec = new X509EncodedKeySpec(pubKeyBytes);
             PublicKey publicKey = pubKeyFactory.generatePublic(pubKeySpec);
 
+            Log.i("Encrypter", "Found a PubKey on the device");
             return publicKey;
 
         } catch (IOException | NoSuchAlgorithmException | InvalidKeySpecException e) {
@@ -75,11 +79,13 @@ public class Encrypter {
 
     public static PrivateKey readPrivateKeyFromFile(String fileName){
         try {
-            FileInputStream privateKeyFile = new FileInputStream(new File(filesDir, fileName));
-            byte[] privKeyBytes = privateKeyFile.readAllBytes();
+            File publicKeyFile = new File(filesDir, fileName);
+            byte[] privKeyBytes = Files.readAllBytes(publicKeyFile.toPath());
 
             KeyFactory privKeyFactory = KeyFactory.getInstance("RSA");
-            EncodedKeySpec privKeySpec = new X509EncodedKeySpec(privKeyBytes);
+            EncodedKeySpec privKeySpec = new PKCS8EncodedKeySpec(privKeyBytes);
+
+            Log.i("Encrypter", "Found a PrivateKey on the device");
             return privKeyFactory.generatePrivate(privKeySpec);
 
         } catch (IOException | NoSuchAlgorithmException | InvalidKeySpecException e) {
@@ -91,42 +97,33 @@ public class Encrypter {
 
     public static byte[] encryptString(String stringToEncrypt, PublicKey givenPublicKey) {
         try {
+            Log.i("Enrcrypter", "Encrpyting String...");
             Cipher encryptCipher = Cipher.getInstance("RSA");
             encryptCipher.init(Cipher.ENCRYPT_MODE, givenPublicKey);
 
             byte[] bytesToEncrypt = stringToEncrypt.getBytes(StandardCharsets.UTF_8);
-//            TODO: error while encrypting
             byte[] encryptedBytes = encryptCipher.doFinal(bytesToEncrypt);
 
-//            return bytesToEncrypt;
             return encryptedBytes;
 
-        } catch (NoSuchPaddingException | NoSuchAlgorithmException | InvalidKeyException e) {
-            throw new RuntimeException(e);
-        } catch (IllegalBlockSizeException e) {
-            throw new RuntimeException(e);
-        } catch (BadPaddingException e) {
+        } catch (NoSuchPaddingException | NoSuchAlgorithmException | InvalidKeyException |
+                 IllegalBlockSizeException | BadPaddingException e) {
             throw new RuntimeException(e);
         }
     }
 
     public static String decryptString(byte[] encryptedBytes, PrivateKey privateKey) {
         try {
-            Cipher decryptCypher = null;
-            decryptCypher = Cipher.getInstance("RSA");
-
+            Log.i("Enrcrypter", "Decrypting Bytes...");
+            Cipher decryptCypher = Cipher.getInstance("RSA");
             decryptCypher.init(Cipher.DECRYPT_MODE, privateKey);
 
             byte[] decryptedBytes = decryptCypher.doFinal(encryptedBytes);
 
-//            return new String(encryptedBytes, StandardCharsets.UTF_8);
             return new String(decryptedBytes, StandardCharsets.UTF_8);
 
-        } catch (NoSuchAlgorithmException | NoSuchPaddingException | InvalidKeyException e) {
-            throw new RuntimeException(e);
-        } catch (IllegalBlockSizeException e) {
-            throw new RuntimeException(e);
-        } catch (BadPaddingException e) {
+        } catch (NoSuchAlgorithmException | NoSuchPaddingException | InvalidKeyException |
+                 IllegalBlockSizeException | BadPaddingException e) {
             throw new RuntimeException(e);
         }
     }
